<resources>
    <string name="app_name">GigSpot</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="gigspot">GigSpot</string>
    <string name="fill_the_fo">Fill the form below correctly</string>
    <string name="choose_a_ch">Choose a character</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_home">Hello home</string>
    <string name="hello_blank_profile">Hello profile</string>
    <string name="hello_blank_save">Hello blank save</string>
    <string name="concert">Nirvana Concert</string>
    <string name="name">Name</string>
    <string name="followers">Followers</string>
    <string name="followers_number">324</string>
    <string name="saves">Saves</string>
    <string name="saves_number">13</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>

    <!-- login layout strings -->
    <string name="sing_in">Sign up</string>
    <string name="password">Password</string>
    <string name="userName">Username</string>
    <string name="log_in">Login</string>
    <string name="acountQUESTION"> New here?</string>

    <!-- registers layout strings-->
    <string name="instructionsRegister">Fill the form below correctly</string>
    <string name="userNameR">Username</string>
    <string name="bandNameR">Name of the band</string>
    <string name="emailR">E-mail</string>
    <string name="passwordR">Password</string>
    <string name="passwordRconf">Password confirmation</string>

    <!-- user register layout strings -->
    <string name="nameR">Name</string>
    <string name="lastNameR">Lastname</string>


    <!-- buttons -->
    <string name="registerUser">SIGN FOR USER</string>
    <string name="registerBand">SIGN FOR BAND</string>
    <string name="title_activity_events">EventsActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>

    <!-- save events strings -->
    <string name="search_save">Search all saved events...</string>
    <!-- event information strings -->
    <string name="event_name_band">Nirvana</string>
    <string name="event_title">Nirvana Concert</string>
    <string name="follow">Follow</string>
    <string name="about">About</string>
    <string name="info">orem ipsum dolor sit amet, consectetur adipiscing elit. Nam sed mauris erat. Duis et purus bibendum, pharetra quam eu, semper lacus</string>
    <string name="buy">Buy Ticket</string>

    <!-- buy ticket strings -->

    <string name="purchase">Purchase</string>
    <string name="cancel">Cancel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- genres strings -->
    <string-array name="genres_array">
        <item>Rock</item>
        <item>Alternative</item>
        <item>Jazz</item>
        <item>Pop</item>
        <item>HyperPop</item>
        <item>Metal</item>
    </string-array>

    <!-- bottom menu profile ticket strings -->

    <string name="home">Home</string>
    <string name="save">Save</string>
    <string name="profile">Profile</string>
    <string name="add">Add</string>

    <!-- activity bought tickets strings -->

    <string name="bought_tickets">Bought tickets</string>

    <!-- activity checking session strings -->

    <string name="loading">Loading...</string>

    <!-- activity edit band strings -->

    <string name="edit_event">Edit event</string>
    <string name="edit_event_text">Complete the form to edit an event</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="place">Place</string>
    <string name="price">Price</string>
    <string name="title_event">Title of event</string>
    <string name="description">Description</string>
    <string name="add_pic">Add picture</string>

    <!-- activity edit profile band strings -->

    <string name="edit_profile_text">Edit your profile information</string>
    <string name="music_genre">Music genre</string>

    <!-- activity edit profile band strings -->

    <string name="edit_profile">Edit profile</string>
    <string name="edit">Edit</string>

    <!-- activity follow strings -->

    <string name="following">Following</string>

    <!-- activity login screen strings -->

    <string name="prev">Previous sessions</string>

    <!-- activity payment strings -->

    <string name="buy_proc">Buying process</string>
    <string name="total">Total</string>
    <string name="concert_title">Concert title</string>
    <string name="am_tickets">Amount of tickets</string>
    <string name="card_number">Card number</string>
    <string name="exp_date">Expiration date</string>
    <string name="buy_t">Buy</string>

    <!-- activity profile band user strings -->
    <string name="genre">Genre: </string>

    <!-- activity sesiones consulta strings -->
    <string name="prev_sessions">Previous sessions</string>

    <!-- card follows strings -->
    <string name="unfollow">Unfollow</string>
    <string name="ch_profile">Check profile</string>

    <!-- fragment add band strings -->
    <string name="info_add_band">Complete the form to add an event</string>
    <string name="add_event">Add event</string>
    <string name="maps">Maps</string>

    <!-- fragment profile strings -->
    <string name="ch_prof_pic">Change profile picture</string>
    <string name="ed_prof_info">Edit profile information</string>
    <string name="sign_out">Sign out</string>

    <!-- fragment profile band strings -->
    <string name="concerts">Concerts</string>
    <string name="sel_prof_pic">Select profile picture</string>
    <string name="sel_back_pic">Select background picture</string>






</resources>