<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterBandActivity">

    <EditText
        android:id="@+id/bandName"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="272dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/band_icon"
        android:drawablePadding="12dp"
        android:hint="@string/bandNameR"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button4"
        android:layout_width="115dp"
        android:layout_height="46dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="588dp"
        android:layout_marginEnd="148dp"
        android:background="@drawable/custom_for_buttons"
        android:text="@string/sing_in"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apellido4"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="416dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/key_password_icon"
        android:drawablePadding="12dp"
        android:hint="@string/password"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="134dp"
        android:text="@string/gigspot"
        android:textColor="@color/ColorPrincipal"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="80dp"
        android:text="@string/instructionsRegister"
        android:textColor="@color/ColorPrincipal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apellido5"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="488dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/key_password_icon"
        android:drawablePadding="12dp"
        android:hint="@string/passwordRconf"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/apellido3"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="344dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/mail_icon"
        android:drawablePadding="12dp"
        android:hint="@string/emailR"
        android:inputType="text"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>