<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/Concert_title"
        android:layout_width="306dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="53dp"
        android:layout_marginTop="53dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/band_icon"
        android:drawablePadding="12dp"
        android:hint="@string/concert_title"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:gravity="center_vertical" />

    <Button
        android:id="@+id/Buy"
        android:layout_width="115dp"
        android:layout_height="46dp"
        android:layout_marginStart="92dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="99dp"
        android:background="@drawable/custom_for_buttons"
        android:text="@string/buy_t"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/password3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/password3"
        app:layout_constraintTop_toBottomOf="@+id/password3" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/band_icon"
        android:drawablePadding="12dp"
        android:hint="@string/am_tickets"
        android:inputType="number"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/total"
        app:layout_constraintStart_toStartOf="@+id/total"
        app:layout_constraintTop_toBottomOf="@+id/total"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password2"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/baseline_add_comment_24"
        android:drawablePadding="12dp"
        android:hint="@string/card_number"
        android:inputType="number"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/amount"
        app:layout_constraintHorizontal_bias="0.514"
        app:layout_constraintStart_toStartOf="@+id/amount"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        tools:ignore="TextFields" />

    <EditText
        android:id="@+id/password3"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/band_icon"
        android:drawablePadding="12dp"
        android:hint="@string/exp_date"
        android:inputType="datetime|date"
        android:paddingStart="12dp"
        app:layout_constraintEnd_toEndOf="@+id/password2"
        app:layout_constraintHorizontal_bias="0.479"
        app:layout_constraintStart_toEndOf="@+id/password2"
        app:layout_constraintStart_toStartOf="@+id/password2"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="133dp"
        android:layout_marginTop="108dp"
        android:layout_marginEnd="134dp"
        android:text="@string/gigspot"
        android:textColor="@color/ColorPrincipal"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="83dp"
        android:layout_marginTop="192dp"
        android:layout_marginEnd="80dp"
        android:text="Buying process"
        android:textColor="@color/ColorPrincipal"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total"
        android:layout_width="306dp"
        android:layout_height="40dp"
        android:layout_marginStart="53dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="52dp"
        android:background="@drawable/custum_for_input_text"
        android:drawableStart="@drawable/baseline_attach_money_24_gray"
        android:drawablePadding="12dp"
        android:gravity="center_vertical|fill_vertical"
        android:hint="@string/total"
        android:inputType="text"
        android:paddingStart="12dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/Concert_title"
        app:layout_constraintStart_toEndOf="@+id/Concert_title"
        app:layout_constraintStart_toStartOf="@+id/Concert_title"
        app:layout_constraintTop_toBottomOf="@+id/Concert_title"
        tools:ignore="TextFields" />

</androidx.constraintlayout.widget.ConstraintLayout>