<?xml version="1.0" encoding="utf-8"?>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Profiles.EditProfileUserActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <!-- TODO: Update blank fragment layout -->


        <TextView
            android:id="@+id/textView"
            android:layout_width="280dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="176dp"
            android:text="@string/edit_profile"
            android:textColor="@color/ColorPrincipal"
            android:textSize="28sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.102"
            app:layout_constraintStart_toEndOf="@+id/imageButton4"
            app:layout_constraintTop_toTopOf="@+id/imageButton4" />

        <ImageButton
            android:id="@+id/imageButton4"
            android:layout_width="39dp"
            android:layout_height="38dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/arrow_left"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="383dp"
            android:layout_height="50dp"
            android:layout_marginStart="83dp"
            android:layout_marginTop="120dp"
            android:layout_marginEnd="80dp"
            android:gravity="center"
            android:text="@string/edit_profile_text"
            android:textColor="@color/ColorPrincipal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userlastName"
            android:layout_width="306dp"
            android:layout_height="40dp"
            android:layout_marginTop="44dp"
            android:background="@drawable/custum_for_input_text"
            android:drawableStart="@drawable/person"
            android:drawablePadding="12dp"
            android:hint="@string/lastNameR"
            android:inputType="text"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="@+id/firstName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/firstName"
            app:layout_constraintTop_toBottomOf="@+id/firstName" />

        <EditText
            android:id="@+id/firstName"
            android:layout_width="306dp"
            android:layout_height="40dp"
            android:layout_marginStart="53dp"
            android:layout_marginTop="216dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/custum_for_input_text"
            android:drawableStart="@drawable/person"
            android:drawablePadding="12dp"
            android:hint="@string/nameR"
            android:inputType="text"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="306dp"
            android:layout_height="40dp"
            android:layout_marginTop="36dp"
            android:background="@drawable/custum_for_input_text"
            android:drawableStart="@drawable/person_outline_icon"
            android:drawablePadding="12dp"
            android:hint="@string/userNameR"
            android:inputType="text"
            android:paddingStart="12dp"
            app:layout_constraintEnd_toEndOf="@+id/userlastName"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="@+id/userlastName"
            app:layout_constraintTop_toBottomOf="@+id/userlastName" />

        <Button
            android:id="@+id/button4"
            android:layout_width="115dp"
            android:layout_height="46dp"
            android:layout_marginStart="95dp"
            android:layout_marginTop="220dp"
            android:layout_marginEnd="96dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/custom_for_buttons"
            android:text="@string/save"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/userName"
            app:layout_constraintStart_toStartOf="@+id/userName"
            app:layout_constraintTop_toBottomOf="@+id/userName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>